solving border bug in light mode

--- a/about.html
+++ b/about.html
@@ -222,13 +222,13 @@
         headingTwo.style.color = "black";
         headingThree.style.color = "black";
         card.style.color = "black";
-        headingOne.style.border = "2px solid white";
-        headingTwo.style.border = "2px solid white";
-        headingThree.style.border = "2px solid white";
-        accordion1.style.border = "2px solid white";
-        accordion2.style.border = "2px solid white";
-        accordion3.style.border = "2px solid white";
-        card.style.border = "2px solid white";
+        headingOne.style.border = "0.5px solid black";
+        headingTwo.style.border = "0.5px solid black";
+        headingThree.style.border = "0.5px solid black";
+        accordion1.style.border = "0.5px solid black";
+        accordion2.style.border = "0.5px solid black";
+        accordion3.style.border = "0.5px solid black";
+        card.style.border = "0.5px solid black";
         document.body.style.backgroundColor = "white";
         document.body.style.color = "black";
         navbar.classList.remove("navbar-dark");
